# WeztCode

./: .gitignore  Cargo.toml  README.md  pnpm-workspace.yaml
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.css
frontend/src/lib/: bridge.js
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
src/: config.rs  main.rs
src/gui/: gtk4_linux.rs  mod.rs
src/gui/protocol/wayland/wm/: detection.rs  mod.rs
src/gui/protocol/wayland/wm/wlroots/: foreign_toplevel.rs  mod.rs  sway_ipc.rs
src/terminal/: mod.rs  wezterm.rs
src/wm/: mod.rs  wlroots.rs
