[package]
name = "weztcode"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
webkit6 = "0.4"
gtk4-layer-shell = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
anyhow = "1"
