[package]
name = "weztcode"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.11.2", features = ["v4_14"] }
webkit6 = "0.6.1"
gtk4-layer-shell = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.4"
anyhow = "1.0.102"
tiny-http = "0.12"
